[package]
name = "crypto-wallet"
description = "command line software to generate crypto wallet"
authors = ["ZocketZero <zocketzero@proton.me>"]
license = "MIT"
version = "0.0.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/ZocketZero/crypto-wallet"
categories = ["command-line-utilities"]
keywords = ["bitcoin", "wallet", "crypto", "cli"]
default-run = "wallet"

include = ["src/*", "LICENSE", "README.md"]

[[bin]]
name = "wallet"
path = "./src/main.rs"

[dependencies]
bitcoin = { version = "0.31", features = ["std"] }          # Use the latest version
secp256k1 = { version = "0.28.2", features = ["rand-std"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.9"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
hex = "0.4.3"
anyhow = "1.0.100"
rand = "0.9.2"
solana-sdk = "3.0.0"
